lab1/Test/L1-A-8-8.cmm
int PnhPfnKhc1VChFHfi ( ) {
  if ( qy6vP )   if ( MNmgqVJl ) {
    if ( GT51N6_wjcTk7NUMD ) {
      int KVczaF ;
      int PxMoMpznFX8 ;
      struct QQ8eq1wPeudgRAC6 {
        int SDESjUS7 ;
        int zpE6yK12Oduc_lHMh ;
<       }SPCOJAO7g_tn_hv8n , fITzo2sDUm1IO ;
      float gYXeOflCjn [ 251223836 ] = zzWnvWYgWJk 
        ;
    }else     if ( d1OjnXCyC )     VsKPDh5c3DYUqe3u 
      ;
else     if ( IbyRc )     cqZeOUXoGEvG3RF ;



  }else {
    while ( VAHRg4kF )     return MlM_Ui ! ;

    AudeGDhAric4CyhPXDD || KDu && PcdopyOWiHmjbW != 
      rGz1oc4ZQpbek + - rrpjCyYnlBPH5dqVocW [ WOExHBU_lZbsB 
      = RJMaSK29yvVfmjN1vZ9s = Gj3VBwRX = I6Vlqzy2Exfr >= 
      PVEfciSyAC6iqFPZH - M8cvpfrlGjhla7A / Zy ( GzlThFO12cL 
      > - ! cdB [ TXqIKzqbX5I5 float <= ADizh * sa [ v3LiAnAK 
      < pJ8wv / ( QxwMm = ( Kt9luqp && T0DGnJrKVFKze0V / 
      - tSn8UcnTiqaoQOV [ QZWKrdaS == LZBjAb ( _zYZIs7 , 
      W74yV4ISJifllCr ) + vtyfODQiKYD9R ] * ABx_1Eur ) ) 
      ] ] == 521983759 * ( - 812325101.1729907091 = BRSER67x 
      . rrEQkMQtkzIdejJGol ) ) * ! dsmT7 ( ) . x4ybY9r1O 
      ] ;
  }

}
struct {
}Uexp , dOa0G 

;
struct Wp ;
int gVMaWjdyKWbVu1U ( int TkoDzShS0a2 ) {
}
int ;
int ;
int ;
int ttJmrjbBQb ( int x25e63Oq219 , int aSv2s4lUkRoV 
  BFvylFS6i6 ) {
}
